[tool.poetry]
name = "cisco-config"
version = "0.1.0"
description = "A toolbelt for reading, parsing and analyzing Cisco configuration files"
authors = ["The White Pill"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
